--- a/module1/templates/login.html
+++ b/module1/templates/login.html
@@ -1,84 +1,126 @@
-{% load socialaccount %}
 {% load static %}
+{% load socialaccount %}
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-  	<title>Login</title>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Netflix - Sign In</title>
+    <link rel="stylesheet" href="{% static 'netflix_clone/css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'netflix_clone/css/styles.css' %}">
+    <link rel="icon" href="{% static 'netflix_clone/images/favicon.ico' %}" type="image/x-icon">
 
-	<link href="{% static 'https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap' %}" rel="stylesheet">
+    
+
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
-	<link rel="stylesheet" href="{% static 'login_signup/css/style.css' %}">
+	<!--<link rel="stylesheet" href="{% static 'login_signup/css/style.css' %}">-->
+</head>
+<body class="login-page">
+    <!--<body class="img js-fullheight" style="background-image: url({% static 'login_signup/images/bg.jpg' %});">-->
+        <section class="ftco-section">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-6 text-center mb-5">
+                        <h2 class="heading-section">ℬℛ𝒜𝒞𝒰_𝒻𝓁ℯ𝓍</h2>
+                    </div>
+                </div>
+    <header class="header header-login">
+        <div class="logo">
+            <a href="{% url 'index' %}">
+                <img src="{% static 'netflix_clone/images/netflix-logo.svg' %}" alt="Netflix" style="height: 80px;">
+            </a>
+        </div>
+        </div>
+    </header>
 
-	</head>
-	<body class="img js-fullheight" style="background-image: url({% static 'login_signup/images/bg.jpg' %});">
-	<section class="ftco-section">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">ℬℛ𝒜𝒞𝒰_𝒻𝓁ℯ𝓍</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-md-6 col-lg-4">
-					<div class="login-wrap p-0">
-		      	<h3 class="mb-4 text-center">Sign-in into your account</h3>
-                  <h4 class="mb-4 text-center">
-                    <a href="{% url 'signup' %}" style="color: black; text-decoration: none;"><u>Don't have an account? Create now</ul></a>
-                </h4>
-		      	<form class="signin-form" method="post">
+    <main>
+        <div class="login-container">
+            <div class="login-form-container">
+                <h1>Sign In</h1>
+                <form class="login-form"  method="post">
+                    <!--<div class="form-group">
+                        <input type="text" name="email" id="email-login" placeholder="Email or phone number" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="password" id="password" placeholder="Password" required>
+                    </div>-->
+                    
                     {% csrf_token %}
                 
                     <!-- Email Input -->
+                    <!--<div class="form-group">
+                        {{ form.as_p }}
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-login">Sign In</button>
+                    </div>
+                    <div class="form-help">
+                        <div class="remember-me">
+                            <input type="checkbox" id="remember-me" checked>
+                            <label for="remember-me">Remember me</label>
+                        </div>
+                        <a href="#" class="help-link">Need help?</a>
+                    </div>-->
+
                     <div class="form-group">
                         {{ form.as_p }}
                     </div>
                     <div class="form-group">
                         <button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
                     </div>
-                    <!-- Remember Me & Forgot Password -->
-                    <div class="form-group d-md-flex">
-                        <div class="w-50">
-                            <label class="checkbox-wrap checkbox-primary">Remember Me
-                                <input type="checkbox" checked>
-                                <span class="checkmark"></span>
-                            </label>
-                        </div>
-                        <div class="w-50 text-md-right">
-                            <a href="#" style="color: #fff">Forgot Password?</a>
-                        </div>
-                    </div>
                 </form>
-			  <div>
-				{% for message in messages %}
-    			<h3 class="error-message">{{ message }}</h3>
-				{% endfor %}
 
-			  </div>
-
-              
-	          <p class="w-100 text-center">&mdash; Or &mdash;</p>
-                <div class="social d-flex text-center">
-                    <a href="{% provider_login_url 'google' %}" class="px-2 py-2 ml-md-1 rounded btn btn-danger">
-                        <span class="fa fa-google mr-2"></span> Sign in with Google
-                    </a>
+                <div class="login-signup">
+                    <p>New to Netflix? <a href="{% url 'signup' %}">Sign up now</a>.</p>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-login"><a href="{% provider_login_url 'google' %}"><span class="fa fa-google mr-2"></span> Sign In with Google </a></button>
                 </div>
                 
-		      </div>
-				</div>
-			</div>
-		</div>
-	</section>
+                <div class="login-info">
+                    <p>This page is protected by Google reCAPTCHA to ensure you're not a bot. <a href="#">Learn more</a>.</p>
+                </div>
+            </div>
+        </div>
+    </main>
 
-	<script src="{% static 'js/jquery.min.js' %}"></script>
-  <script src="{% static 'js/popper.js' %}"></script>
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  <script src="{% static 'js/main.js' %}"></script>
+    <footer class="footer footer-login">
+        <div class="footer-content">
+            <p>Questions? Call <a href="tel:1-844-505-2993">1-844-505-2993</a></p>
 
-	</body>
+            <div class="footer-links">
+                <div class="footer-column">
+                    <a href="#">FAQ</a>
+                    <a href="#">Cookie Preferences</a>
+                </div>
+                <div class="footer-column">
+                    <a href="#">Help Center</a>
+                    <a href="#">Corporate Information</a>
+                </div>
+                <div class="footer-column">
+                    <a href="#">Terms of Use</a>
+                </div>
+                <div class="footer-column">
+                    <a href="#">Privacy</a>
+                </div>
+            </div>
+
+            <div class="language-selector footer-language">
+                <select>
+                    <option value="en">English</option>
+                    <option value="es">Español</option>
+                    <option value="fr">Français</option>
+                </select>
+            </div>
+
+            <p class="copyright">Netflix, Inc.</p>
+        </div>
+    </footer>
+
+    <script src="{% static 'netflix_clone/js/main.js' %}"></script>
+</body>
 </html>
-
