--- a/module1/templates/home.html
+++ b/module1/templates/home.html
@@ -49,7 +49,7 @@
                       
                       <div class="dropdown-content">
                         <p><a href="{% url 'profile_select' %}">Profiles</a></p>
-                        <a href="#">Account</a>
+                        <a href="{% url 'profile' %}">Edit Profile</a>
                         <a href="#">Settings</a>
                         <a href="{% url 'upload_video' %}">Upload Movie</a>
                         <a href="{% url 'logout' %}">Logout</a>
@@ -342,7 +342,9 @@
             Your browser does not support the video tag.
         </video>
         <h3>{{ video.title }}</h3>
-        
+        <a href="{{ video.file.url }}" download="{{ video.title }}.mp4" class="btn btn-download" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background-color: #e50914; color: #fff; text-decoration: none; border-radius: 5px; font-size: 16px; text-align: center;">
+    Download
+</a>
     </div>
     
 
