--- a/module1/templates/signup.html
+++ b/module1/templates/signup.html
@@ -9,12 +9,23 @@
   	<title>Sign-Up</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Netflix - Sign In</title>
+    <link rel="stylesheet" href="{% static 'netflix_clone/css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'netflix_clone/css/styles.css' %}">
+    <link rel="icon" href="{% static 'netflix_clone/images/favicon.ico' %}" type="image/x-icon">
+
+    
+
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link href="{% static 'https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap' %}" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
-	<link rel="stylesheet" href="{% static 'login_signup/css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'login_signup/css/style.css' %}">-->
 
 	</head>
 	<body class="img js-fullheight" style="background-image: url({% static 'login_signup/images/bg2.jpg' %});">
@@ -28,11 +39,14 @@
 			<div class="row justify-content-center">
 				<div class="col-md-6 col-lg-4">
 					<div class="login-wrap p-0">
+                <div class="login-container">        
+                <div class="login-form-container">        
 		      	<h3 class="mb-4 text-center">Create your account</h3>
+                <h1>Create your account</h1>
                   <!--<h4 class="mb-4 text-center">
                     <a href="{% url 'signup' %}" style="color: black; text-decoration: none;"><u>Don't have an account? Create now</ul></a>
                 </h4>-->
-		      	<form class="signin-form" method="post">
+		      	<form class="login-form" method="post">
                     {% csrf_token %}
                 
                     <!-- Email Input -->
@@ -40,7 +54,7 @@
                         {{ form.as_p }}
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
+                        <button type="submit" class="form-control btn btn-primary submit px-3">Sign Up</button>
                     </div>
                     <!-- Remember Me & Forgot Password -->
                     <div class="form-group d-md-flex">
@@ -65,14 +79,14 @@
               
 	          <p class="w-100 text-center">&mdash; Or &mdash;</p>
                 <div class="social d-flex text-center">
-                    <a href="{% provider_login_url 'google' %}" class="px-2 py-2 ml-md-1 rounded btn btn-danger">
+                    <a href="{% provider_login_url 'google' %}" class="btn btn-login">
                         <span class="fa fa-google mr-2"></span> Auto Sign-Up with Google
                     </a>
                 </div>
                 
 		      </div>
 				</div>
-			</div>
+			</div></div></div>
 		</div>
 	</section>
 
