--- a/module2/templates/search_results.html
+++ b/module2/templates/search_results.html
@@ -8,7 +8,8 @@
 		controls
 		data-id="{{ video.id }}"
 	>
-		<source src="{{ video.video_file.url }}" type="video/mp4" />
+		<!--<source src="{{ video.video_file.url }}" type="video/mp4" />-->
+		<source src="{{ video.file.url }}" type="video/mp4" />
 		Your browser does not support the video tag.
 	</video>
 	<h3>{{ video.title }}</h3>
